--- a/src/thurntaxis/thurntaxisGUI/thurntaxisGUI.form
+++ b/src/thurntaxis/thurntaxisGUI/thurntaxisGUI.form
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="thurntaxis.thurntaxisGUI.thurntaxisGUI">
-  <grid id="27dc6" binding="startbildschirm" layout-manager="GridLayoutManager" row-count="4" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="startbildschirm" layout-manager="GridLayoutManager" row-count="5" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="154" height="138"/>
+      <xy x="20" y="20" width="154" height="172"/>
     </constraints>
     <properties>
       <enabled value="true"/>
@@ -12,7 +12,7 @@
     <children>
       <component id="667f" class="javax.swing.JButton" binding="spielStarten">
         <constraints>
-          <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="7" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="7" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <text value="Spiel starten"/>
@@ -43,6 +43,14 @@
             <item value="Mannheim"/>
             <item value="Carlsruhe"/>
           </model>
+        </properties>
+      </component>
+      <component id="fc1b4" class="javax.swing.JButton" binding="button1" default-binding="true">
+        <constraints>
+          <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Button"/>
         </properties>
       </component>
     </children>
